# VRaze

./: .gitignore  .gitmodules  LICENSE  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/jni/: Android.mk  Application.mk
app/src/androidTest/java/pe/edu/ucsp/vraze/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/meshes/: car.fplmesh  road.fplmesh  steering.fplmesh
app/src/main/assets/shaders/: colored.glslv  textured.glslf  textured.glslv  uniform_colored.glslf  uniform_colored.glslv
app/src/main/assets/shaders/fplbase/: phong_shading.glslf_h
app/src/main/cpp/: car.cc  car.h  car_physics.cc  car_physics.h  ground.cc  ground.h  log_utils.h  macros.h  mathfu_gvr.h  renderable.h  road_descriptor.cc  road_descriptor.h  scene.cc  scene.h  steering.cc  steering.h  utils.h  vraze_app.cc  vraze_app.h  vraze_jni.cc  vraze_jni.h
app/src/main/java/pe/edu/ucsp/vraze/: MainActivity.java  Menu.java  RealTime.java
app/src/main/res/layout/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/pe/edu/ucsp/vraze/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libraries/BaseGameUtils/: build.gradle
libraries/BaseGameUtils/src/main/res/values/: strings.xml
